postgres.deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres
  namespace: default
  labels:
    app: postgres
spec:
  selector:
    matchLabels:
      app: postgres
  template:
    metadata:
      labels:
        app: postgres
    spec:
      volumes:
      - name: vol
        hostPath:
          path: /var/lib/postgresql/data
      containers:
      - name: 
        image: postgres:12
        ports:
        - containerPort: 5432
        volumeMounts:
        - name: vol
          mountPath: /var/lib/postgresql/data
      restartPolicy: Always
