traefik.deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: traefik
    namespace: kube-public
    labels:
        app: traefik
spec:
    replicas: 2
    selector:
        matchLabels:
            app:
                traefik
    template:
        metadata:
            labels:
                app: traefik
        spec:
           containers:
           - name: traefik
             image: traefik:1.7
           ports:
           - name: http
             containerPort: 80
           - name: http
             containerport: 30021
           restartPolicy: Always
