worker.deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: worker
    namespace: default
    labels:
        apps: worker
spec:
    selector:
        matchLabels:
            app: worker
    template:
        metadata:
            labels:
                app: worker
        spec:
            containers:
            - name: worker
              image: epitechcontent/t-dop-600-worker:k8s
              resources:
                limits:
                  memory: 256M
            restartPolicy: Always
