traefik.service.yaml
apiVersion: v1
kind: Service
metadata:
    name: traefik-service
    labels:
        app: traefik
spec:
    selector:
        app: traefik
    ports:
        - name: http
          protocol: TCP
          port: 80
          targetPort: 8080
        - name: http
          protocol: TCP
          port: 30021
          targetPort: 30042
